--- a/src/app/components/Cards/ExportCard.module.css
+++ b/src/app/components/Cards/ExportCard.module.css
@@ -13,7 +13,7 @@
   text-overflow: ellipsis;
 }
 
-.projectImageContainer {
+.exportMethodContainer {
   border-radius: 100%;
   width: 32px;
   aspect-ratio: 1/1;
@@ -23,7 +23,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-weight: 900;
+  font-weight: 800;
+  font-size: 10px;
   color: white;
   opacity: .7;
   text-transform: uppercase;
