--- a/src/app/components/Exports/ExportDetailsView.module.css
+++ b/src/app/components/Exports/ExportDetailsView.module.css
@@ -15,3 +15,8 @@
   flex-direction: column;
   background-color: var(--color-dark-900);
 }
+
+.jsonContainer pre {
+  white-space: pre-wrap;
+  word-break: break-all;
+}
