--- a/src/app/components/Exports/ExportDetailsView.module.css
+++ b/src/app/components/Exports/ExportDetailsView.module.css
@@ -1,8 +1,10 @@
 .container {
   width: 100%;
+  height: 100%;
   max-width: 1024px;
   display: flex;
   flex-direction: column;
+  position: relative;
 }
 
 
