--- a/src/app/components/Spinner/Spinner.module.css
+++ b/src/app/components/Spinner/Spinner.module.css
@@ -14,7 +14,7 @@
 }
 
 .spinner {
-  border: 4px solid #f3f3f3; /* Light grey */
+  border: 4px solid transparent; /* Light grey */
   border-top: 4px solid var(--color-primary); /* Blue */
   border-radius: 50%;
   width: 40px;
